# polars_plugin_101

./: .gitignore  Cargo.toml  README.md  pyproject.toml
ans/: __init__.py  expressions.rs  try.py
polars_plugin_101/: __init__.py
src/: expressions.rs  lib.rs
