[build-system]
requires = ["maturin>=1.7,<2.0", "polars>=1.3.0"]
build-backend = "maturin"

[project]
name = "polars-plugin-101"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
module-name = "polars_plugin_101._internal"
